# simular-evm-examples

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
basics/: Counter.json  README.md  basics.ipynb  dump_usdc_state.py  forks.ipynb  gen_usdc_state.py  usdc_addresses.json  usdc_cache.json  usdc_snapshot.json
uniswap/: README.md  diaweth.json  main.py  uniswap_snapshot.json
uniswap/abis/: __init__.py
